styled h2 and button on views

--- a/caffe-cache-client/src/styles/index.scss
+++ b/caffe-cache-client/src/styles/index.scss
@@ -75,6 +75,7 @@ flex-wrap: wrap;
 }
 
 .view-heading {
+  margin: 15px;
   width: 100%;  
   text-align: center;
 }
@@ -87,4 +88,17 @@ flex-wrap: wrap;
 
 .home-btn-style {
   width: 50%;
+}
+
+.view-div-style {
+  width: 100%;
+  text-align: center;
+}
+
+.view-header-style {
+ margin: 15px;
+}
+
+.view-button-style {
+  margin: 15px;
 }
